--- a/Movie_Site/src/Movie_Site/appsettings.json
+++ b/Movie_Site/src/Movie_Site/appsettings.json
@@ -2,6 +2,9 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Movie_Site;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
