--- a/Movie_Site/src/Movie_Site/project.json
+++ b/Movie_Site/src/Movie_Site/project.json
@@ -1,9 +1,10 @@
-﻿{
+{
   "userSecretsId": "aspnet-Movie_Site-f33f0f6e-770a-4892-ac1c-63e57be8dffa",
 
   "dependencies": {
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Google": "1.1.3",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
