--- a/Movie_Site/src/Movie_Site/project.json
+++ b/Movie_Site/src/Movie_Site/project.json
@@ -2,6 +2,8 @@
   "userSecretsId": "aspnet-Movie_Site-f33f0f6e-770a-4892-ac1c-63e57be8dffa",
 
   "dependencies": {
+    "Microsoft.AspNetCore.Session": "1.1.1",
+    "Microsoft.Extensions.Caching.Memory": "1.0.0",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
     "Microsoft.AspNetCore.Authentication.Google": "1.1.3",
@@ -38,7 +40,7 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc":  {
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
       "version": "1.0.0-preview2-final",
       "type": "build"
     }
